[gd_scene load_steps=3 format=3 uid="uid://c0apjgiwt8qa4"]

[ext_resource type="Script" path="res://UI/MissionPanel.gd" id="1_gr1ur"]
[ext_resource type="PackedScene" uid="uid://dnuyn15f41410" path="res://UI/EncounterPanel.tscn" id="1_utsb6"]

[node name="MissionPanel" type="Panel"]
offset_right = 350.0
offset_bottom = 500.0
script = ExtResource("1_gr1ur")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MissionTitle" type="Label" parent="VBoxContainer"]
offset_right = 350.0
offset_bottom = 26.0
text = "[ MISSION TITLE ]"
horizontal_alignment = 1

[node name="LogScroll" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(0, 100)
offset_top = 30.0
offset_right = 350.0
offset_bottom = 130.0

[node name="LogText" type="Label" parent="VBoxContainer/LogScroll"]
offset_right = 52.0
offset_bottom = 26.0
text = "[ LOG ]"

[node name="EncounterPanel" parent="VBoxContainer" instance=ExtResource("1_utsb6")]
offset_top = 134.0
offset_bottom = 500.0
